# DeepSC-RI

./: .gitignore  README.md  inference_deepsc_ri.py  inference_deepsc_ri_classifier.py  preprocess_traffic_light.py  pyproject.toml  traffic_light_dataset.py  train_deepsc_ri.py  train_deepsc_ri_classifier.py  train_traffic_light.py
models/: deepsc_ri.py  deepsc_ri_classifier.py
utils/: devices.py  visualize.py
